fix: viewer now accepts ?file= param from serve-wasm
The serve-wasm justfile recipe generates URLs with ?file= parameter,
but the viewer's getUrlParams() only looked for ?src=, causing the
viewer to get stuck on 'Initializing viewer...' instead of loading
the archive.

Fixes bn-a00c

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/src/wasm/viewer.html
+++ b/src/wasm/viewer.html
@@ -1210,8 +1210,8 @@
         function getUrlParams() {
             const params = new URLSearchParams(window.location.search);
             return {
-                src: params.get('src'),      // Archive URL
-                focus: window.location.hash.slice(1) || null  // Fragment anchor (node ID)
+                src: params.get('src') || params.get('file'),  // Archive URL (supports both ?src= and ?file=)
+                focus: window.location.hash.slice(1) || null   // Fragment anchor (node ID)
             };
         }
         
