feat(gui): show milestone hierarchy edges by default
Enable parent_of and child_of edges to be visible by default in the
graph view. This makes milestone nodes show their relationship edges
to child tasks/milestones, improving visibility of project structure.

Fixes bn-a8aa

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -5606,8 +5606,8 @@
             caused_by: { name: 'Caused By', category: 'fixes', defaultVisible: false },
             supersedes: { name: 'Supersedes', category: 'informational', defaultVisible: false },
             pinned: { name: 'Pinned', category: 'pinned', defaultVisible: true },
-            parent_of: { name: 'Parent', category: 'hierarchy', defaultVisible: false },
-            child_of: { name: 'Child', category: 'hierarchy', defaultVisible: false },
+            parent_of: { name: 'Parent', category: 'hierarchy', defaultVisible: true },
+            child_of: { name: 'Child', category: 'hierarchy', defaultVisible: true },
             tests: { name: 'Tests', category: 'fixes', defaultVisible: false },
             queued: { name: 'Queued', category: 'queued', defaultVisible: true },
             working_on: { name: 'Working On', category: 'agent', defaultVisible: true },
