fix(gui): auto-follow switches to new agent when tracked agent departs
When in AUTO mode and the tracked agent (followingNodeId) departed/completed,
the code was returning undefined for targetNode because the agent no longer
existed in state.tasks. This caused auto-follow to appear broken when a new
agent spawned.

Now when the tracked agent no longer exists during the focus switch delay
window, the code immediately switches to the new most active agent instead
of returning no target.

Fixes bn-5cfc

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -6045,6 +6045,11 @@
                                             } else {
                                                 // Keep following current agent (delay not met)
                                                 targetNode = state.tasks?.find(t => t.id === state.graph.followingNodeId && t.type === 'agent');
+                                                // If the tracked agent no longer exists (departed), switch to new agent immediately
+                                                if (!targetNode) {
+                                                    targetNode = mostRecentAgent;
+                                                    state.graph.lastFocusSwitchTime = now;
+                                                }
                                             }
                                         } else {
                                             // Same agent - keep following
