feat: Store agents as graph nodes with bn-xxxx IDs
- Change agent ID generation from 'bna-' prefix to standard 'bn-' prefix
- Agents now use entity_type=agent field to distinguish from tasks
- Add Agent variant to EntityType enum in storage
- Update get_entity_type() to detect agents via storage lookup
- Update GUI watcher to extract entity type from entity JSON
- Add Agent case to GenericShowResult for 'bn show' command
- Update isAgent() JS function to detect agent IDs by pattern
- Update all tests, docs, and PRDs referencing 'bna-'

This allows agents to be stored as first-class graph nodes alongside
tasks, bugs, ideas, and other entities, using the unified bn-xxxx ID
format with type differentiation via the entity_type field.

Resolves bn-1fa4

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -5958,7 +5958,7 @@
                 followAnimation: null,  // { startPanX, startPanY, targetPanX, targetPanY, startZoom, targetZoom, startTime, duration }
                 // Auto-follow state
                 autoFollow: true,  // Whether auto-follow is enabled
-                followTargetId: 'auto',  // Target to follow: 'auto', 'active-task', 'queue', or agent ID (e.g., 'bna-xxxx')
+                followTargetId: 'auto',  // Target to follow: 'auto', 'active-task', 'queue', or agent ID (e.g., 'bn-xxxx')
                 followingNodeId: null,  // ID of node currently being followed (for continuous tracking)
                 lastFocusSwitchTime: 0,  // Timestamp of last focus switch (for configurable delay)
                 // Auto-follow config (loaded from localStorage)
@@ -6365,7 +6365,7 @@
             }
             
             const normalizedAgents = workerAgents.map(agent => ({
-                // Use proper binnacle ID (bna-xxxx) if available, fall back to PID-based ID for backwards compat
+                // Use proper binnacle ID (bn-xxxx with entity_type=agent) if available, fall back to PID-based ID for backwards compat
                 id: agent.id || `agent-${agent.pid}`,
                 title: agent.name,
                 short_name: agent.purpose || agent.name,
@@ -11858,9 +11858,10 @@
             });
         }
 
-        // Check if a user is an agent (bna- prefix)
+        // Check if a user is an agent (bn- prefix with 4 hex chars indicates a binnacle ID, i.e., an agent)
+        // Human users have plain names like "henry"
         function isAgent(user) {
-            return user && user.startsWith('bna-');
+            return user && /^bn-[0-9a-f]{4}$/.test(user);
         }
 
         // Get date threshold for date range filter
