feat: add queue toggle control with readonly mode support
- Wrap queue toggle button in write-action-container for readonly mode
- Button is disabled with tooltip when in readonly mode
- Pass node ID to onQueueToggle callback for API/WebSocket integration
- Store current node ID in panel data attribute
- Add unit tests for queue toggle functionality

Implements bn-1252: Port queue toggle control

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/test-info-panel.html
+++ b/web/test-info-panel.html
@@ -85,8 +85,8 @@
         initializeInfoPanel(panel, {
             onClose: () => console.log('Panel closed'),
             onTabChange: (tabName) => console.log('Tab changed to:', tabName),
-            onQueueToggle: () => {
-                console.log('Queue toggle clicked');
+            onQueueToggle: (nodeId) => {
+                console.log('Queue toggle clicked for node:', nodeId);
                 const btn = panel.querySelector('#queue-toggle-btn');
                 btn.classList.toggle('active');
             },
