feat: rename GUI subtitle to Agent Navigation Graph
Changed subtitle from 'Project State Tracker' to 'Agent Navigation Graph'
to better reflect binnacle's role as a navigation tool for AI agents.

Resolves bn-4fe4

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Binnacle - Project State Tracker</title>
+    <title>Binnacle - Agent Navigation Graph</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🧭</text></svg>">
     <style>
         * {
@@ -5133,7 +5133,7 @@
         <header>
             <div class="header-left">
                 <h1>🧭 Binnacle <span class="version-badge" id="version-badge">v0.0.0</span> <span class="header-connection-status disconnected" id="header-connection-status" title="Connection status"><span class="status-dot"></span><span class="status-text">Disconnected</span></span></h1>
-                <p class="subtitle">Project State Tracker</p>
+                <p class="subtitle">Agent Navigation Graph</p>
                 <nav>
                     <button class="nav-btn active" data-view="graph">Graph</button>
                     <button class="nav-btn" data-view="nodes">Nodes</button>
