fix: correct import of mountReadonlyIndicator in index.html
Changed import from non-existent 'createReadonlyIndicator' to the
actual exported function 'mountReadonlyIndicator'. This resolves
the Uncaught SyntaxError that was breaking GUI initialization.

Fixes: bn-44d6

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -220,7 +220,7 @@
         import { createAvailableWorkPane, updateAvailableWorkPane } from './js/components/available-work-pane.js';
         import { createActiveTaskPane, updateActiveTaskPane } from './js/components/active-task-pane.js';
         import { initializeFilters } from './js/components/filters.js';
-        import { createReadonlyIndicator } from './js/components/readonly-indicator.js';
+        import { mountReadonlyIndicator } from './js/components/readonly-indicator.js';
         
         // Get container element
         const container = document.getElementById('app-container');
