fix: pass detection result to applyDetectedMode()
The applyDetectedMode() function expects a detection object parameter
but was being called without arguments in index.html line 346.
This caused 'TypeError: Cannot read properties of undefined' when
trying to access detection.wsUrl at mode-detection.js:175.

Fixed by passing the mode result from detectMode() to applyDetectedMode().

Closes bn-ffa4

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -343,7 +343,7 @@
             
             // Detect connection mode and connect
             const mode = connection.detectMode();
-            await connection.applyDetectedMode();
+            await connection.applyDetectedMode(mode);
             
             // Start graph animation
             graph.startAnimation();
