fix: pass #agents-list selector to initializeAgentList()
Fixes bn-e7ff: Agent list container element not found.

The initializeAgentList() function was being called without the
required container argument, causing it to log 'container not found'.
Now correctly passes '#agents-list' selector to initialize the agent
list component.

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -236,7 +236,7 @@
         initializeCollapsibleSections();
         
         // Initialize agent list
-        initializeAgentList();
+        initializeAgentList('#agents-list');
         
         // Create and mount info panel
         const infoPanel = createInfoPanel();
