fix(gui): Move graph controls to top bar with search leftmost
- Changed graph controls from top-right overlay to full-width top bar
- Removed rounded corners and side borders to make it a clean bar
- Made search input leftmost in the layout
- Increased search width from 180px to 240px
- Updated test documentation to reflect new layout

Fixes bn-ac57

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/test-graph-controls.html
+++ b/web/test-graph-controls.html
@@ -52,10 +52,10 @@
     <div class="container" id="container">
         <div class="content">
             <h1>Graph Controls Test</h1>
-            <p>The graph controls should appear in the top-right corner of the page.</p>
+            <p>The graph controls should appear as a thin bar across the top of the page.</p>
             <p>Test the following:</p>
             <ul>
-                <li>Search box - type to filter nodes</li>
+                <li>Search box (leftmost) - type to filter nodes</li>
                 <li>Hide completed toggle - click to toggle state</li>
                 <li>Auto-follow toggle - click to enable/disable</li>
                 <li>Auto-follow config button (⚙) - click to open popover</li>
