fix: connect view switching state to DOM updates
When clicking bn-xxxx links, the navigateToNode function sets
ui.currentView in state but the DOM wasn't being updated because
there was no listener.

Added state.watch('ui.currentView') to call switchView when the
state changes, and updated nav button clicks to also update state
so everything stays in sync.

Fixes bn-3d90

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -438,7 +438,13 @@
         navButtons.forEach(btn => {
             btn.addEventListener('click', () => {
                 switchView(btn.dataset.view);
+                state.set('ui.currentView', btn.dataset.view);
             });
+        });
+        
+        // Watch for currentView changes from other parts of the app
+        state.watch('ui.currentView', (newView) => {
+            switchView(newView);
         });
         
         // Fetch version
