fix: replace state.watch with state.subscribe in index.html
The state module exports 'subscribe' not 'watch'. This was causing
a TypeError when the GUI tried to watch for currentView changes.

Fixes bn-b195

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -453,7 +453,7 @@
         });
         
         // Watch for currentView changes from other parts of the app
-        state.watch('ui.currentView', (newView) => {
+        state.subscribe('ui.currentView', (newView) => {
             switchView(newView);
         });
         
