fix: constrain info pane to graph view area
The node detail pane (shown on double-click) was using position:fixed
with top:0, causing it to cover the entire right side of the screen
including the header with recent activity.

Changes:
- Changed position from 'fixed' to 'absolute' in node-detail-pane.css
- Mount pane to .main-content instead of app-container in index.html

This constrains the pane to the graph view area below the header,
preventing it from obscuring the recent activity section.

Fixes: bn-c034

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -391,7 +391,8 @@
         mountNodeDetailModal(container);
         
         // Mount node detail pane (side panel for double-click)
-        mountNodeDetailPane(container);
+        const mainContent = document.querySelector('.main-content');
+        mountNodeDetailPane(mainContent);
         
         // Create and mount available work pane
         const availableWorkPane = createAvailableWorkPane();
