fix: make header panes same height with align-items stretch
Added align-items: stretch to .header-right container to ensure
available work, active task, and recently completed panes all
have the same height for visual consistency.

Closes bn-41fe

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -96,6 +96,7 @@
         .header-right {
             display: flex;
             gap: 1rem;
+            align-items: stretch;
         }
         
         .main-content {
