fix: resolve follow mode bugs - clear state on toggle off and respect type filter
- When toggling follow OFF, now properly clears followingNodeId and userPaused state
  to prevent unwanted camera snaps
- updateAutoFollow() now respects the followTypeFilter dropdown selection
- Can now follow specific types (Tasks, Bugs, Ideas, Agents) or Any
- Improved sorting: agents by status, tasks/bugs prioritize in_progress
- Fixes bug bn-78f9: follow mode broken with snapping and incorrect targeting

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/web/index.html
+++ b/web/index.html
@@ -288,7 +288,12 @@
             },
             onAutoFollowToggle: (autoFollow) => {
                 console.log('Auto-follow:', autoFollow);
-                // TODO: Implement auto-follow behavior
+                if (!autoFollow) {
+                    // When turning off auto-follow, clear the following state
+                    State.set('ui.followingNodeId', null);
+                    State.set('ui.userPaused', false);
+                }
+                // When turning on, the renderer's updateAutoFollow() will handle it
             },
             onZoomIn: () => {
                 graph.zoomIn();
